feat: adiciona o código da página de projetos

--- a/index.html
+++ b/index.html
@@ -25,7 +25,66 @@
     </header>
 
     <main>
+        <h1>Portfólio de Projetos</h1>
         
+        <div class="grid-container-portfolio">
+            <div>
+                <a href="https://github.com/florindorian/dashboard_vendas" target="_blank">
+                    <div class="back-top">
+                        <div class="front-top">
+                            <img src="img/dashboard-vendas.png" alt="Projeto de Dashboard">
+                        </div>
+                    </div>
+                    <div class="back-bottom">
+                        <div class="front-bottom">
+                            <p>Dashboard em Python</p>
+                        </div>
+                    </div>
+                </a>
+            </div>
+            <div>
+                <a href="https://github.com/florindorian/MLP_from_scratch" target="_blank">
+                    <div class="back-top">
+                        <div class="front-top">
+                            <img src="img/neural-network.png" alt="Projeto de uma Rede Neural Artificial">
+                        </div>
+                    </div>
+                    <div class="back-bottom">
+                        <div class="front-bottom">
+                            <p>Rede Neural MLP do zero</p>
+                        </div>
+                    </div>
+                </a>
+            </div>
+            <div>
+                <a href="https://github.com/florindorian/assembler-altair8800" target="_blank">
+                    <div class="back-top">
+                        <div class="front-top">
+                            <img src="img/assembler-web-interface.png" alt="Projeto de um Assembler Web">
+                        </div>
+                    </div>
+                    <div class="back-bottom">
+                        <div class="front-bottom">
+                            <p>Assembler Web para o Altair 8800 Simulator</p>
+                        </div>
+                    </div>
+                </a>
+            </div>
+            <div>
+                <a href="https://github.com/florindorian/JogoDaVelha_C" target="_blank">
+                    <div class="back-top">
+                        <div class="front-top">
+                            <img src="img/jogo-da-velha.jpg" alt="Projeto de um jogo-da-velha por CLI em C">
+                        </div>
+                    </div>
+                    <div class="back-bottom">
+                        <div class="front-bottom">
+                            <p>Jogo da Velha por CLI em C</p>
+                        </div>
+                    </div>
+                </a>
+            </div>
+        </div>
     </main>
 
     <footer>
