fix: corrige as referências aos caminhos das páginas

--- a/index.html
+++ b/index.html
@@ -3,22 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/styles/styles.css">
+    <link rel="stylesheet" href="./styles/styles.css">
     <title>Florindo - Portfólio</title>
 </head>
 <body>
     <header style="display: flex; flex-flow: row;">
         <div style="margin-right: 20px;">
             <!--<div style="background-color: blue; width: 100px; height: 100px"></div>-->
-            <img class="foto-perfil" src="img/FotoSocial1.jpg" alt="Foto de perfil">
+            <img class="foto-perfil" src="./img/FotoSocial1.jpg" alt="Foto de perfil">
         </div>
         <div>
             <h1>Florindo Rian Silva Carreteiro</h1>
             <nav>
                 <ul>
-                    <li><a href="/index.html">Portfólio</a></li>
-                    <li><a href="/pages/sobre.html">Sobre mim</a></li>
-                    <li><a href="/pages/contato.html">Contato</a></li>
+                    <li><a href="./index.html">Portfólio</a></li>
+                    <li><a href="./pages/sobre.html">Sobre mim</a></li>
+                    <li><a href="./pages/contato.html">Contato</a></li>
                 </ul>
             </nav>
         </div>
@@ -32,7 +32,7 @@
                 <a href="https://github.com/florindorian/dashboard_vendas" target="_blank">
                     <div class="back-top">
                         <div class="front-top">
-                            <img src="img/dashboard-vendas.png" alt="Projeto de Dashboard">
+                            <img src="./img/dashboard-vendas.png" alt="Projeto de Dashboard">
                         </div>
                     </div>
                     <div class="back-bottom">
@@ -46,7 +46,7 @@
                 <a href="https://github.com/florindorian/MLP_from_scratch" target="_blank">
                     <div class="back-top">
                         <div class="front-top">
-                            <img src="img/neural-network.png" alt="Projeto de uma Rede Neural Artificial">
+                            <img src="./img/neural-network.png" alt="Projeto de uma Rede Neural Artificial">
                         </div>
                     </div>
                     <div class="back-bottom">
@@ -60,7 +60,7 @@
                 <a href="https://github.com/florindorian/assembler-altair8800" target="_blank">
                     <div class="back-top">
                         <div class="front-top">
-                            <img src="img/assembler-web-interface.png" alt="Projeto de um Assembler Web">
+                            <img src="./img/assembler-web-interface.png" alt="Projeto de um Assembler Web">
                         </div>
                     </div>
                     <div class="back-bottom">
@@ -74,7 +74,7 @@
                 <a href="https://github.com/florindorian/JogoDaVelha_C" target="_blank">
                     <div class="back-top">
                         <div class="front-top">
-                            <img src="img/jogo-da-velha.jpg" alt="Projeto de um jogo-da-velha por CLI em C">
+                            <img src="./img/jogo-da-velha.jpg" alt="Projeto de um jogo-da-velha por CLI em C">
                         </div>
                     </div>
                     <div class="back-bottom">
