--- a/pages/sobre.html
+++ b/pages/sobre.html
@@ -3,22 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/styles/styles.css">
+    <link rel="stylesheet" href="../styles/styles.css">
     <title>Florindo - Portfólio</title>
 </head>
 <body>
     <header style="display: flex; flex-flow: row;">
         <div style="margin-right: 20px;">
             <!--<div style="background-color: blue; width: 100px; height: 100px"></div>-->
-            <img class="foto-perfil" src="/../img/FotoSocial1.jpg" alt="Foto de perfil">
+            <img class="foto-perfil" src="../img/FotoSocial1.jpg" alt="Foto de perfil">
         </div>
         <div>
             <h1>Florindo Rian Silva Carreteiro</h1>
             <nav>
                 <ul>
-                    <li><a href="/index.html">Portfólio</a></li>
-                    <li><a href="/pages/sobre.html">Sobre mim</a></li>
-                    <li><a href="/pages/contato.html">Contato</a></li>
+                    <li><a href="../index.html">Portfólio</a></li>
+                    <li><a href="./sobre.html">Sobre mim</a></li>
+                    <li><a href="./contato.html">Contato</a></li>
                 </ul>
             </nav>
         </div>
