--- a/index.html
+++ b/index.html
@@ -7,9 +7,8 @@
     <title>Florindo - Portfólio</title>
 </head>
 <body>
-    <header style="display: flex; flex-flow: row;">
-        <div style="margin-right: 20px;">
-            <!--<div style="background-color: blue; width: 100px; height: 100px"></div>-->
+    <header>
+        <div class="container-foto-perfil">
             <img class="foto-perfil" src="./img/FotoSocial1.jpg" alt="Foto de perfil">
         </div>
         <div>
@@ -25,7 +24,7 @@
     </header>
 
     <main>
-        <h1>Portfólio de Projetos</h1>
+        <h2>Portfólio de Projetos</h2>
         
         <div class="grid-container-portfolio">
             <div>
