--- a/pages/sobre.html
+++ b/pages/sobre.html
@@ -7,8 +7,8 @@
     <title>Florindo - Portfólio</title>
 </head>
 <body>
-    <header style="display: flex; flex-flow: row;">
-        <div style="margin-right: 20px;">
+    <header>
+        <div class="container-foto-perfil">
             <!--<div style="background-color: blue; width: 100px; height: 100px"></div>-->
             <img class="foto-perfil" src="../img/FotoSocial1.jpg" alt="Foto de perfil">
         </div>
