--- a/pages/sobre.html
+++ b/pages/sobre.html
@@ -4,23 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../styles/styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <script src="../scripts/index.js"></script>
     <title>Florindo - Portfólio</title>
 </head>
 <body>
-    <header>
+    <header id="id-header">
         <div class="container-foto-perfil">
-            <!--<div style="background-color: blue; width: 100px; height: 100px"></div>-->
             <img class="foto-perfil" src="../img/FotoSocial1.jpg" alt="Foto de perfil">
-        </div>
-        <div>
             <h1>Florindo Rian Silva Carreteiro</h1>
-            <nav>
-                <ul>
-                    <li><a href="../index.html">Portfólio</a></li>
-                    <li><a href="./sobre.html">Sobre mim</a></li>
-                    <li><a href="./contato.html">Contato</a></li>
-                </ul>
-            </nav>
+        </div>
+        <div class="container-menu">
+            <div class="topnav" id="myTopnav">
+                <a href="../index.html">Portfólio</a>
+                <a class="active" href="./sobre.html">Sobre mim</a>
+                <a href="./contato.html">Contato</a>
+                <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+                    <i class="fa fa-bars"></i>
+                </a>
+            </div>
         </div>
     </header>
 
